# clero-local-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.typecheck.json
.github/workflows/: desktop-build.yml  desktop-release.yml
apps/cli/: package.json
apps/cli/src/: main.ts
apps/desktop/: README.md  app.vue  nuxt.config.ts  package.json
apps/desktop/assets/: main.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  updater.public.key
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: official-builds.md  security.md
scripts/: build-connector-installers.mjs  build-connector-package.mjs  build-daemon-runtime.mjs  create-macos-dmg.mjs  create-tauri-updater-config.mjs  prepare-r2-release-assets.mjs  smoke-coding-agents.ts  smoke-managed-browser.ts  smoke-mcp-chrome.ts
