[package]
name = "clero-local-agent-desktop"
version = "0.1.22"
description = "Clero Local Agent desktop app"
authors = ["Clero"]
edition = "2021"

[lib]
name = "clero_local_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
